feat:JDK 21 新特性应用改进;优化 AI chat 中的显示